# backend/app/Models/ProcessedRecord.php
@@ -9,11 +9,13 @@ class ProcessedRecord extends Model
     protected $table = 'processed_records';
 
     protected $fillable = [
+        'nome_arquivo',
         'data_registro',
         'metrica_a',
         'metrica_b',
         'indicador_x',
         'indicador_y',
+        'extra',
     ];
 
     protected $casts = [
@@ -22,5 +24,6 @@ class ProcessedRecord extends Model
         'metrica_b' => 'float',
         'indicador_x' => 'float',
         'indicador_y' => 'float',
+        'extra'       => 'array',
     ];
 }
