# backend/routes/api.php
@@ -8,6 +8,9 @@ Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
 
+Route::get('/files', [ProcessedRecordController::class, 'listarArquivos']);
+Route::get('/files/{nome}', [ProcessedRecordController::class, 'mostrarArquivo']);
+
 Route::prefix('processed-records')->group(function () {
     Route::post('/', [ProcessedRecordController::class, 'store']);
 });
